# reacnetgenerator

./: +.coveragerc  .buildinfo  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .setup.py.swp  .stickler.yml  .travis.yml  404.html  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  appveyor.yml  azure-pipelines.yml  bundle.css  bundle.js  develop.html  external.html  genindex.html  getmo.py  greenkeeper.json  index.html  meta.yaml  now.json  objects.inv  overall.html  package.json  py-modindex.html  pyproject.toml  references.html  renovate.json  report.html  search.html  searchindex.js  setup.py  tox.ini  vercel.json
.github/: dependabot.yml  main.workflow  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  codeql-analysis.yml  docker-publish.yml  push.yml  pyright.yml  release.yml  testjs.yml  vercel.yml  website.yml  wheel.yml
ReacNetGenerator/: __init__.py  htmlstatic.py  reachtml.py
_modules/: index.html
_modules/reacnetgenerator/: commandline.html  gui.html  reacnetgen.html  tools.html  utils.html
_sources/: develop.rst.txt  index.rst.txt  overall.md.txt
_sources/api/: api.rst.txt  reacnetgenerator.rst.txt  reacnetgenerator.test.rst.txt
_sources/guide/: faq.md.txt  gui.md.txt  hmm.md.txt  install.md.txt  report.md.txt  run.md.txt
_sources/tutorial/: cl20.md.txt  index.rst.txt  methane.md.txt
_static/: _sphinx_javascript_frameworks_compat.js  doctools.js  documentation_options.js  mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css  pygments.css  sphinx_highlight.js  underscore.js
_static/css/: custom.css
api/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  reacnetgenerator.html  reacnetgenerator.test.html  search.html  searchindex.js
api/_static/: documentation_options.js
assets/css/: 0.styles.10e2723a.css  0.styles.1cee221e.css  0.styles.28d2ac4f.css  0.styles.5b15de55.css  0.styles.6b7e16bd.css  0.styles.a22233a1.css  0.styles.a9ca61e3.css  0.styles.c91b1a5b.css  0.styles.f0916d54.css  0.styles.f317dd00.css
assets/js/: 10.0377e333.js  10.05f306cd.js  10.08d2cbec.js  10.0fa486ae.js  10.13b64b2a.js  10.1a6a0edb.js  10.1bbcdeb0.js  10.20a2e37a.js  10.210a820c.js  10.2ede6455.js  10.30f1be13.js  10.343e81a9.js  10.3a3f2a5b.js  10.3dc33040.js  10.46e61d19.js  10.47a03eab.js  10.529d2a08.js  10.568494ea.js  10.5760c06d.js  10.5cd54db8.js  10.5e6b8563.js  10.6223ca16.js  10.66a80294.js  10.676dfca5.js  10.692c23b8.js  10.6e4819e9.js  10.6e5de725.js  10.74609718.js  10.7774ecba.js  10.778cd2c7.js  10.8294b534.js  10.87197996.js  10.87c521a2.js  10.9591ca69.js  10.95ba0071.js  10.a040946f.js  10.a6b55ab3.js  10.aeab31f3.js  10.c2f91b74.js  10.c48b9802.js  (+1519 more)
conda/: meta.yaml
conda/constructor/: construct.yaml
conda/recipe/: meta.yaml
docker/: Dockerfile  compose.test.yml
docs/: .gitignore  CNAME  README.md  conf.py  develop.rst  external.rst  index.md  index.rst  jsapi.rst  overall.md  r.md  refs.bib  report.html
docs/.vuepress/: config.js  simple.json
docs/.vuepress/components/: Redirect.vue  bilitubescript.vue
docs/.vuepress/public/: report.html
docs/.vuepress/styles/: index.styl
docs/_static/css/: custom.css
docs/guide/: README.md  build.md  cli.md  faq.md  format.md  hmm.md  index.rst  install.md  python.md  python.rst  report.md  run.md
docs/tutorial/: README.md  analysis.ipynb  cl20.md  index.rst  install.ipynb  install.md  methane.md
docs/tutorial/deepmd/: README  all.lammpstrj
docs/tutorial/deepmd/cp2k_dpgen/: machine.json  param.json
docs/tutorial/deepmd/results/: all.lammpstrj.html  all.lammpstrj.json  all.lammpstrj.moname  all.lammpstrj.reaction  all.lammpstrj.reactionabcd  all.lammpstrj.route  all.lammpstrj.species  all.lammpstrj.table
docs/zh/: README.md
docs/zh/guide/: README.md  api.md  build.md
guide/: api.html  build.html  cli.html  faq.html  format.html  gui.html  hmm.html  index.html  install.html  python.html  report.html  run.html
guide/api/: index.html
reacnetgenerator/: __init__.py  __main__.py  _detect.py  _download.py  _draw.py  _hmmfilter.py  _htmlstatic.py  _htmltemplate.py  _logging.py  _matrix.py  _mergeiso.py  _path.py  _reachtml.py  _reaction.py  _static.py  _version.py  c_stack.cpp  c_stack.h  commandline.py  dps.cpp  dps.pyx  gui.py  reacnetgen.py  test.json  test.py  tools.py  utils.py  utils_np.pyx
reacnetgenerator/stack/: c_stack.cpp  c_stack.h  pystack.pyx
reacnetgenerator/static/: template.html
reacnetgenerator/static/css/: bk-css.css  bootstrap.min.css  creative.min.css
reacnetgenerator/static/html/: narrowurl.html  network.html  page-bottom.html  page-top.html  reactions-bottom.html  reactions-each.html  reactions-top.html  species-bottom.html  species-each.html  species-top.html  speciessvg-bottom.html  speciessvg-each.html  speciessvg-top.html  template.html  tr-reacnone.html  tr-specnone.html
reacnetgenerator/static/js/: bootstrap.bundle.min.js  creative.min.js  d3.min.js  reacnetgen.js  script-hidereac.js  script-hidespec.js  scrollreveal.min.js
reacnetgenerator/static/webpack/: .eslintrc.yml  .gitignore  .snyk  bundle.js.LICENSE  formula.js  package.json  reacnetgen.css  reacnetgen.js  reacnetgen.scss  reacnetgen_web.scss  select.js  template.html  webpack.config.js
reacnetgenerator/static/webpack/test/: test_formula.js  test_narrow.js
reacnetgenerator/test/: test.json  test_reacnetgen.py
skills/reacnetgenerator/: SKILL.md
skills/reacnetgenerator/references/: cli.md  examples.md  pbc-and-inputs.md
sphinx/: conf.py  index.rst
tests/: __init__.py  methane.reactionabcd  methane.species  test.json  test_ase.py  test_ase_cli.py  test_cli.py  test_detect.py  test_reacnetgen.py  test_tools.py
tests/inputs/: water.bond  water.dump  water.extxyz  water.xyz  water_pbc.dump
tutorial/: analysis.html  cl20.html  index.html  install.html  install.ipynb  methane.html
zh/: index.html
zh/guide/: api.html  build.html  index.html
(+2 files in other folders)
