[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=0.16",
  "nodejs-wheel~=20.9",
  "oldest-supported-numpy",
  "pyyaml",
  "setuptools>=63",
  "setuptools_scm[toml]",
  "wheel",
]

[project]
name = "reacnetgenerator"
description = "ReacNetGenerator: An automatic reaction network generator for reactive molecular dynamics simulation."
readme = "README.md"
keywords = [
  "reaction network",
]
license = {file = "LICENSE"}
authors = [
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
]
dynamic = [
  "version",
]
dependencies = [
  "ase",
  "coloredlogs",
  "hmmlearn>=0.2.1",
  "lz4",
  "matplotlib",
  "networkx",
  "numpy",
  "openbabel-wheel",
  "packaging",
  "pandas",
  "rdkit",
  "requests",
  "scour",
  "tqdm>=4.9",
]
[project.optional-dependencies]
docs = [
  "deepmodeling_sphinx>=0.1.3",
  "myst-nb>=1.0.0rc0",
  "nodejs-wheel~=20.9",
  "numpydoc",
  "pydata-sphinx-theme",
  "pygments-lammps",
  "pyyaml",
  "sphinx",
  "sphinx-argparse",
  "sphinx-favicon>=1",
  "sphinxcontrib-bibtex>=2.6",
]
test = [
  "cython",
  "pytest-benchmark",
  "pytest-console-scripts",
  "pytest-cov<4",
  "pytest-mock",
  "pytest-sugar",
  "pytest-xvfb",
]
[project.urls]
documentation = "https://reacnetgenerator.njzjz.win/"
homepage = "https://github.com/tongzhugroup/reacnetgenerator"
repository = "https://github.com/tongzhugroup/reacnetgenerator"
[project.entry-points.console_scripts]
reacnetgenerator = "reacnetgenerator.commandline:_commandline"
[project.entry-points.gui_scripts]
reacnetgeneratorgui = "reacnetgenerator.gui:gui"

[tool.setuptools.packages.find]
include = ["reacnetgenerator*"]

[tool.setuptools.package-data]
reacnetgenerator = [
    'static/webpack/bundle.html',
    'static/img-title.png',
]

[tool.setuptools_scm]
write_to = "reacnetgenerator/_version2.py"
fallback_version = "Unknown"

[tool.cibuildwheel]
test-command = "reacnetgenerator -h"
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-skip = "cp37-*"

[tool.cibuildwheel.linux]
environment-pass = ["CIBW_BUILD"]

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "NPY", # numpy
]
ignore = [
    "E501", # line too long
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D205", # 1 blank line required between summary line and description
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["D100"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"

[tool.coverage.run]
plugins = ["Cython.Coverage"]

[tool.coverage.report]
show_missing = true
omit = ["*test*"]

[tool.pyright]
include = [
     "reacnetgenerator",
]
exclude = [
    "reacnetgenerator/_version2.py",
]
