[build-system]
requires = [
    "setuptools>=63",
    "wheel",
    "setuptools_scm[toml]",
    "oldest-supported-numpy",
    "nodejs-wheel~=20.9",
    "pyyaml",
    "cython>=0.16",
]
build-backend = "setuptools.build_meta"

[project]
name = "reacnetgenerator"
dynamic = ["version"]
description = "ReacNetGenerator: An automatic reaction network generator for reactive molecular dynamics simulation."
authors = [
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy<2',
    'networkx',
    'matplotlib',
    'hmmlearn>=0.2.1',
    'ase',
    'scour',
    'tqdm>=4.9.0',
    'coloredlogs',
    'pandas',
    'lz4',
    'requests',
    "openbabel-wheel",
    "rdkit",
    "packaging",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["reaction network"]

[project.urls]
homepage = "https://github.com/tongzhugroup/reacnetgenerator"
documentation = "https://reacnetgenerator.njzjz.win/"
repository = "https://github.com/tongzhugroup/reacnetgenerator"

[project.entry-points.console_scripts]
reacnetgenerator = "reacnetgenerator.commandline:_commandline"

[project.entry-points.gui_scripts]
reacnetgeneratorgui = "reacnetgenerator.gui:gui"

[project.optional-dependencies]
test = [
    'pytest-sugar',
    'pytest-cov<4',
    'cython',
    'pytest-xvfb',
    "pytest-console-scripts",
    "pytest-mock",
    "pytest-benchmark",
]
docs = [
    'sphinx',
    'pydata-sphinx-theme',
    'numpydoc',
    'sphinx-argparse',
    'myst-nb>=1.0.0rc0',
    'sphinx-favicon>=1.0',
    "nodejs-wheel~=20.9",
    "pyyaml",
    "deepmodeling_sphinx>=0.1.3",
    "pygments-lammps",
    "sphinxcontrib-bibtex>=2.6.0",
]

[tool.setuptools.packages.find]
include = ["reacnetgenerator*"]

[tool.setuptools.package-data]
reacnetgenerator = [
    'static/webpack/bundle.html',
    'static/img-title.png',
]

[tool.setuptools_scm]
write_to = "reacnetgenerator/_version2.py"
fallback_version = "Unknown"

[tool.cibuildwheel]
test-command = "reacnetgenerator -h"
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-skip = "cp37-*"

[tool.cibuildwheel.linux]
environment-pass = ["CIBW_BUILD"]

[tool.pyright]
include = [
     "reacnetgenerator",
]
exclude = [
    "reacnetgenerator/_version2.py",
]

[tool.coverage.run]
plugins = ["Cython.Coverage"]

[tool.coverage.report]
show_missing = true
omit = ["*test*"]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "NPY", # numpy
]
ignore = [
    "E501", # line too long
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D205", # 1 blank line required between summary line and description
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["D100"]

[tool.ruff.pydocstyle]
convention = "numpy"
