[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    # "oldest-supported-numpy; python_version < '3.9'",
    # "numpy>=2.0.0rc0; python_version >= '3.9'",
    "nodejs-wheel~=20.9",
    "pyyaml",
    "cython>=3.0.1",
]
build-backend = "scikit_build_core.build"

[project]
name = "reacnetgenerator"
dynamic = ["version"]
description = "ReacNetGenerator: An automatic reaction network generator for reactive molecular dynamics simulation."
authors = [
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    # "numpy<2; python_version < '3.9'",
    # "numpy>=1.19,<3; python_version >= '3.9'",
    'numpy',
    'networkx',
    'matplotlib',
    'hmmlearn>=0.2.1',
    'ase',
    'scour',
    'tqdm>=4.9.0',
    'coloredlogs',
    'pandas',
    'lz4',
    'requests',
    "openbabel-wheel",
    "rdkit",
    "packaging",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["reaction network"]

[project.urls]
homepage = "https://github.com/deepmodeling/reacnetgenerator"
documentation = "https://docs.deepmodeling.com/projects/reacnetgenerator/"
repository = "https://github.com/deepmodeling/reacnetgenerator"

[project.scripts]
reacnetgenerator = "reacnetgenerator.commandline:_commandline"

[project.gui-scripts]
reacnetgeneratorgui = "reacnetgenerator.gui:gui"

[project.optional-dependencies]
test = [
    'pytest-sugar',
    'pytest-cov<4',
    'cython',
    'pytest-xvfb',
    "pytest-console-scripts",
    "pytest-mock",
    "pytest-codspeed",
]
docs = [
    'sphinx',
    'pydata-sphinx-theme',
    'numpydoc',
    'sphinx-argparse',
    'myst-nb>=1.0.0rc0',
    'sphinx-favicon>=1.0',
    "nodejs-wheel~=20.9",
    "pyyaml",
    "deepmodeling_sphinx>=0.1.3",
    "pygments-lammps",
    "sphinxcontrib-bibtex>=2.6.0",
    # See https://github.com/mcmtroffaes/sphinxcontrib-bibtex/issues/345
    "setuptools",
]

[tool.scikit-build]
minimum-version = "0.9"
wheel.py-api = "cp37"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["reacnetgenerator/_version.py"]
sdist.exclude = ["reacnetgenerator/static/webpack/"]
cmake.version = ">=3.26"

[tool.setuptools_scm]
write_to = "reacnetgenerator/_version2.py"
fallback_version = "Unknown"

[tool.cibuildwheel]
test-command = "reacnetgenerator -h"
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
# wait for openbabel
test-skip = "cp37-* *-manylinux_aarch64"
before-test = ["""python -m pip install "replace-pip-with-uv-pip; platform_system!='Linux' or platform_machine!='aarch64'" """]

[tool.cibuildwheel.linux]
environment-pass = ["CIBW_BUILD"]
# Use abi3audit to catch issues with Limited API wheels
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.pyright]
include = [
     "reacnetgenerator",
]
exclude = [
    "reacnetgenerator/_version2.py",
]

[tool.coverage.run]
plugins = ["Cython.Coverage"]

[tool.coverage.report]
show_missing = true
omit = ["*test*"]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "NPY", # numpy
]
ignore = [
    "E501", # line too long
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D205", # 1 blank line required between summary line and description
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["D100"]

[tool.ruff.pydocstyle]
convention = "numpy"
